...
    <string name="email_hint">E-mail</string>
    <string name="other_hint">Other</string>
    <string name="person_location_hint">Location</string>
    <string name="education_hint">Education Level</string>
    <string name="communication_preference_hint">Communication Preference:</string>
    <string name="location_type_hint">Location Type: </string>
    <string name="bypass_button_text">Skip Registration</string>
    <string name="registration_submit">Submit Registration via…</string>

    <!-- Strings for MultiRecordFrag - add photos to story; SP422-->
    <string name="camera_select_from">Select From:</string>
    <string name="camera_revert_title">Revert To The Original Image?</string>
    <string name="camera_revert_message">Do you want to revert to the original image?</string>
...
    <string name="remote_check_msg_failed">Messaging service down. Try again later.</string>

    <!-- RecordingToolbar -->
    <string name="recording_toolbar_no_recording">No recording available!</string>
    <string name="recording_toolbar_error_start_recording">Error starting recording, record again!</string>
    <string name="recording_toolbar_error_stop_recording">The recording was stopped prematurely. Nothing was recorded. Please try again.</string>
    <string name="recording_toolbar_disable_animation" translatable="false">DISABLE_ANIMATIONS_FOR_TESTING</string>

    <!-- Multiple Recording Dialog -->
    <string name="delete_audio_title">Delete Audio file?</string>
    <string name="delete_audio_message">Do you want to delete this audio file?</string>

    <!-- Export Phase -->
...
