<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_mr_root_relayout_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_semi_transparent">

    <ImageButton
        android:id="@+id/fragment_reference_audio_button"
        android:layout_width="@dimen/reference_audio_button"
        android:layout_height="@dimen/reference_audio_button"
        android:layout_gravity="center"
        android:background="@drawable/ic_play_arrow_white_36dp"
        android:contentDescription="@string/translate_revise_play_narration_audio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoSeekBar" />

    <SeekBar
        android:id="@+id/videoSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:max="100"
        android:padding="@dimen/nav_drawer_margin"
        android:contentDescription="@string/video_seek_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/slide_number_text"
        app:layout_constraintStart_toEndOf="@+id/fragment_reference_audio_button" />

    <TextView
        android:id="@+id/slide_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:text=""
        android:textSize="@dimen/text_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/videoSeekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>