...
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/concheck_checkmark_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/concheck_checkmark_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
